[gd_scene load_steps=2 format=3 uid="uid://mxhi1eko7j4e"]

[ext_resource type="Script" uid="uid://cagrb3qvf3cus" path="res://addons/parallax_generator/parallax_panel.gd" id="1_cwdkd"]

[node name="ParallaxPanel" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cwdkd")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Parallax generator"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MountainLayerLabel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Mountain Layers: 5"

[node name="MountainLayerSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 32.0
value = 5.0
rounded = true

[node name="GenerateButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Generate"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/MountainLayerSlider" to="." method="_on_mountain_layer_slider_value_changed"]
[connection signal="pressed" from="GenerateButton" to="." method="_on_generate_button_pressed"]
